# spec-kit

./: .gitignore  .markdownlint-cli2.jsonc  README.md  babel.cfg  pyproject.toml
.github/workflows/scripts/: create-release-packages.sh
docs/: index.md  local-development.md  upgrade.md
scripts/i18n/: check-coverage.sh  compile-translations.sh  extract-messages.sh
specs/001-i18n-support/: COMPLETE.md  chinese-translation-summary.md  cli-arg-implementation.md  core-template-translation-summary.md  data-model.md  implementation-progress-report.md  implementation-status.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  template-application-implementation.md
specs/001-i18n-support/checklists/: requirements.md
src/specify_cli/: __init__.py
src/specify_cli/i18n/: __init__.py  core.py
templates/commands/: analyze.md  clarify.md
templates/i18n/zh_CN/commands/: checklist.md  constitution.md  specify.md  tasks.md
tests/i18n/: test_core.py  test_messages.py  test_templates.py
